[package]
name = "mbr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mbr"
crate-type = ["cdylib"]

[dependencies]
simple_xml_serialize = "0.3.0"
ron = "0.8"
serde = { version = "1", features = ["derive"] }


[dependencies.pyo3]
features = ["abi3-py37"]
